--- a/dev/partials/indicators/edit.html
+++ b/dev/partials/indicators/edit.html
@@ -1,180 +1,171 @@
-<div class="row">
-	<div class="col-md-2">
-		<ng-include src="'partials/indicators/menu.html'"></ng-include>
-	</div>
+<ol class="breadcrumb">
+	<li><a ui-sref="main.indicators.list" translate>shared.indicators</a></li>
+	<li class="active">{{indicator.name}}</li>
+</ol>
 
-	<div class="col-md-10">
+<form class="form-horizontal" role="form" name="indicatorForm" novalidate>
+	<fieldset>
+		<legend translate>indicator.definition</legend>
 
-		<ol class="breadcrumb">
-			<li><a href="#indicators" translate>shared.indicators</a></li>
-			<li class="active">{{indicator.name}}</li>
-		</ol>
-
-		<form class="form-horizontal" role="form" name="indicatorForm" novalidate>
-			<fieldset>
-				<legend translate>indicator.definition</legend>
-
-				<div class="form-group">
-					<label for="input-standard" class="col-sm-2 control-label" translate>indicator.standard</label>
-					<div class="col-sm-10">
-						<input id="input-standard" type="checkbox" ng-model="indicator.standard" name="standard" />
-					</div>
-				</div>
-
-				<div class="form-group" show-errors>
-					<label for="input-name" class="col-sm-2 control-label" translate>shared.name</label>
-					<div class="col-sm-10">
-						<input id="input-name"
-							   class="form-control"
-							   type="text"
-							   ng-model="indicator.name"
-							   name="name"
-							   placeholder="{{'indicator.name_ph'|translate}}"
-							   required />
-					
-						<p class="help-block" ng-if="indicatorForm.name.$error.required" translate>form.mandatory</p>
-					</div>
-				</div>
-
-				<div class="form-group" show-errors>
-					<label for="input-description" class="col-sm-2 control-label" translate>shared.description</label>
-					<div class="col-sm-10">
-						<textarea id="input-description"
-								  name="description"
-								  class="form-control"
-								  ng-model="indicator.description"
-								  required
-								  placeholder="{{'indicator.description_ph'|translate}}"></textarea>
-
-						<p class="help-block" ng-if="indicatorForm.description.$error.required" translate>form.mandatory</p>
-					</div>
-				</div>
-
-				<div class="form-group" show-errors>
-					<label for="input-history" class="col-sm-2 control-label" translate>indicator.history</label>
-					<div class="col-sm-10">
-						<textarea id="input-history"
-								  name="history"
-								  ng-model="indicator.history"
-								  class="form-control"
-								  placeholder="{{'indicator.history_ph'|translate}}"></textarea>
-					</div>
-				</div>
-
-				<div class="form-group" show-errors>
-					<label for="input-unit" class="col-sm-2 control-label" translate>indicator.unit</label>
-					<div class="col-sm-10">
-						<select id="input-unit"
-								name="unit"
-								ng-model="indicator.unit"
-								class="form-control">
-							<option value="" translate>indicator.other</option>
-							<option value="%" translate>indicator.percent</option>
-							<option value="‰" translate>indicator.permille</option>
-						</select>
-					</div>
-				</div>
-			</fieldset>
-
-			<fieldset>
-				<legend translate>indicator.categorization</legend>
-
-				<div class="form-group">
-					<label for="input-types" class="col-sm-2 control-label" translate>indicator.types</label>
-					<div class="col-sm-10">
-						<ui-select id="input-types" multiple ng-model="indicator.types" name="types" theme="bootstrap" required>
-							<ui-select-match placeholder="{{'indicator.select_types'|translate}}">{{$item.name}}</ui-select-match>
-							<ui-select-choices repeat="type._id as type in types | filter: {name: $select.search}">{{type.name}}</ui-select-choices>
-						</ui-select>
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label for="input-themes" class="col-sm-2 control-label" translate>indicator.themes</label>
-					<div class="col-sm-10">
-						<ui-select id="input-themes" multiple ng-model="indicator.themes" name="themes" theme="bootstrap" required>
-							<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name}}</ui-select-match>
-							<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">{{theme.name}}</ui-select-choices>
-						</ui-select>
-					</div>
-				</div>
-			</fieldset>
-
-			<fieldset>
-				<legend translate>indicator.computation</legend>
-
-				<div class="form-group">
-					<label for="input-sum-allowed" class="col-sm-2 control-label" translate>indicator.sum_allowed</label>
-					<div class="col-sm-10">
-						<input id="input-sum-allowed" type="checkbox" ng-model="indicator.sumAllowed">
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label for="name" class="col-sm-2 control-label" translate>indicator.formulas</label>
-					<div class="col-sm-10">
-						<table class="table table-bordered table-condensed"
-							   ng-repeat="(formulaId, formula) in indicator.formulas"
-							   style="border-width: 0 0 0 5px; border-color: {{indicator.formulas[formulaId].isValid ? '#ddd' : 'darkred'}}">
-							<tr>
-								<td style="width: 250px" translate>shared.name</td>
-								<td>
-									<div class="input-group">
-										<input type="text"
-											   class="form-control"
-											   placeholder="{{'indicator.formula_name_ph'|translate}}"
-											   ng-model="indicator.formulas[formulaId].name" ng-change="updateFormula(formulaId)" />
-
-										<span class="input-group-btn">
-											<button class="btn btn-danger" ng-click="deleteFormula(formulaId)" translate>shared.remove</button>
-										</span>
-									</div>
-								</td>
-							</tr>
-							<tr>
-								<td translate>indicator.formula</td>
-								<td>
-									<input type="text"
-										   class="form-control"
-										   ng-model="indicator.formulas[formulaId].expression"
-										   ng-change="updateFormula(formulaId)"
-										   placeholder="{{'indicator.formula_expression_ph'|translate}}" />
-								</td>
-							</tr>
-							<tr ng-repeat="symbol in indicator.formulas[formulaId].symbols">
-								<td>{{'indicator.parameter'|translate}} <strong>"{{symbol}}"</strong></td>
-								<td>
-									<ui-select ng-model="indicator.formulas[formulaId].parameters[symbol]"
-											   ng-change="updateFormula(formulaId)"
-											   theme="bootstrap">
-
-										<ui-select-match placeholder="{{'shared.choose_indicator'|translate}}">{{$select.selected.name}}</ui-select-match>
-										<ui-select-choices repeat="indicator._id as indicator in indicators | filter: {name: $select.search}">
-											<span>{{indicator.name}}</span>
-										</ui-select-choices>
-									</ui-select>
-								</td>
-							</tr>
-						</table>
-
-						<button class="btn btn-default" ng-click="addFormula()" translate>indicator.add_formula</button>
-					</div>
-				</div>
-			</fieldset>
-
-			<div>
-				<button class="btn btn-primary"
-						ng-disabled="indicatorForm.$invalid || isUnchanged() || formulaInvalid()"
-						ng-click="save()" translate>shared.save</button>
-
-				<button class="btn btn-warning"
-						ng-disabled="isUnchanged()"
-						ng-click="reset()" translate>shared.remove_changes</button>
-				
-				<button class="btn btn-danger"
-						ng-click="remove()"
-						ng-if="indicator._id" translate>shared.delete</button>
+		<div class="form-group">
+			<label for="input-standard" class="col-sm-2 control-label" translate>indicator.standard</label>
+			<div class="col-sm-10">
+				<input id="input-standard" type="checkbox" ng-model="indicator.standard" name="standard" />
 			</div>
-		</form>
+		</div>
+
+		<div class="form-group" show-errors>
+			<label for="input-name" class="col-sm-2 control-label" translate>shared.name</label>
+			<div class="col-sm-10">
+				<input id="input-name"
+					   class="form-control"
+					   type="text"
+					   ng-model="indicator.name"
+					   name="name"
+					   placeholder="{{'indicator.name_ph'|translate}}"
+					   required />
+			
+				<p class="help-block" ng-if="indicatorForm.name.$error.required" translate>form.mandatory</p>
+			</div>
+		</div>
+
+		<div class="form-group" show-errors>
+			<label for="input-description" class="col-sm-2 control-label" translate>shared.description</label>
+			<div class="col-sm-10">
+				<textarea id="input-description"
+						  name="description"
+						  class="form-control"
+						  ng-model="indicator.description"
+						  required
+						  placeholder="{{'indicator.description_ph'|translate}}"></textarea>
+
+				<p class="help-block" ng-if="indicatorForm.description.$error.required" translate>form.mandatory</p>
+			</div>
+		</div>
+
+		<div class="form-group" show-errors>
+			<label for="input-history" class="col-sm-2 control-label" translate>indicator.history</label>
+			<div class="col-sm-10">
+				<textarea id="input-history"
+						  name="history"
+						  ng-model="indicator.history"
+						  class="form-control"
+						  placeholder="{{'indicator.history_ph'|translate}}"></textarea>
+			</div>
+		</div>
+
+		<div class="form-group" show-errors>
+			<label for="input-unit" class="col-sm-2 control-label" translate>indicator.unit</label>
+			<div class="col-sm-10">
+				<select id="input-unit"
+						name="unit"
+						ng-model="indicator.unit"
+						class="form-control">
+					<option value="" translate>indicator.other</option>
+					<option value="%" translate>indicator.percent</option>
+					<option value="‰" translate>indicator.permille</option>
+				</select>
+			</div>
+		</div>
+	</fieldset>
+
+	<fieldset>
+		<legend translate>indicator.categorization</legend>
+
+		<div class="form-group">
+			<label for="input-types" class="col-sm-2 control-label" translate>indicator.types</label>
+			<div class="col-sm-10">
+				<ui-select id="input-types" multiple ng-model="indicator.types" name="types" theme="bootstrap" required>
+					<ui-select-match placeholder="{{'indicator.select_types'|translate}}">{{$item.name}}</ui-select-match>
+					<ui-select-choices repeat="type._id as type in types | filter: {name: $select.search}">{{type.name}}</ui-select-choices>
+				</ui-select>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="input-themes" class="col-sm-2 control-label" translate>indicator.themes</label>
+			<div class="col-sm-10">
+				<ui-select id="input-themes" multiple ng-model="indicator.themes" name="themes" theme="bootstrap" required>
+					<ui-select-match placeholder="{{'indicator.select_themes'|translate}}">{{$item.name}}</ui-select-match>
+					<ui-select-choices repeat="theme._id as theme in themes | filter: {name: $select.search}">{{theme.name}}</ui-select-choices>
+				</ui-select>
+			</div>
+		</div>
+	</fieldset>
+
+	<fieldset>
+		<legend translate>indicator.computation</legend>
+
+		<div class="form-group">
+			<label for="input-sum-allowed" class="col-sm-2 control-label" translate>indicator.sum_allowed</label>
+			<div class="col-sm-10">
+				<input id="input-sum-allowed" type="checkbox" ng-model="indicator.sumAllowed">
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="name" class="col-sm-2 control-label" translate>indicator.formulas</label>
+			<div class="col-sm-10">
+				<table class="table table-bordered table-condensed"
+					   ng-repeat="(formulaId, formula) in indicator.formulas"
+					   style="border-width: 0 0 0 5px; border-color: {{indicator.formulas[formulaId].isValid ? '#ddd' : 'darkred'}}">
+					<tr>
+						<td style="width: 250px" translate>shared.name</td>
+						<td>
+							<div class="input-group">
+								<input type="text"
+									   class="form-control"
+									   placeholder="{{'indicator.formula_name_ph'|translate}}"
+									   ng-model="indicator.formulas[formulaId].name" ng-change="updateFormula(formulaId)" />
+
+								<span class="input-group-btn">
+									<button class="btn btn-danger" ng-click="deleteFormula(formulaId)" translate>shared.remove</button>
+								</span>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td translate>indicator.formula</td>
+						<td>
+							<input type="text"
+								   class="form-control"
+								   ng-model="indicator.formulas[formulaId].expression"
+								   ng-change="updateFormula(formulaId)"
+								   placeholder="{{'indicator.formula_expression_ph'|translate}}" />
+						</td>
+					</tr>
+					<tr ng-repeat="symbol in indicator.formulas[formulaId].symbols">
+						<td>{{'indicator.parameter'|translate}} <strong>"{{symbol}}"</strong></td>
+						<td>
+							<ui-select ng-model="indicator.formulas[formulaId].parameters[symbol]"
+									   ng-change="updateFormula(formulaId)"
+									   theme="bootstrap">
+
+								<ui-select-match placeholder="{{'shared.choose_indicator'|translate}}">{{$select.selected.name}}</ui-select-match>
+								<ui-select-choices repeat="indicator._id as indicator in indicators | filter: {name: $select.search}">
+									<span>{{indicator.name}}</span>
+								</ui-select-choices>
+							</ui-select>
+						</td>
+					</tr>
+				</table>
+
+				<button class="btn btn-default" ng-click="addFormula()" translate>indicator.add_formula</button>
+			</div>
+		</div>
+	</fieldset>
+
+	<div>
+		<button class="btn btn-primary"
+				ng-disabled="indicatorForm.$invalid || isUnchanged() || formulaInvalid()"
+				ng-click="save()" translate>shared.save</button>
+
+		<button class="btn btn-warning"
+				ng-disabled="isUnchanged()"
+				ng-click="reset()" translate>shared.remove_changes</button>
+		
+		<button class="btn btn-danger"
+				ng-click="remove()"
+				ng-if="indicator._id" translate>shared.delete</button>
 	</div>
-</div>
+</form>
