--- a/dev/partials/projects/form-edit.html
+++ b/dev/partials/projects/form-edit.html
@@ -1,156 +1,147 @@
-<div class="row">
-	<div class="col-md-2">
-		<ng-include src="'partials/projects/menu.html'"></ng-include>
-	</div>
 
-	<div class="col-md-10">
+<ol class="breadcrumb">
+	<li><a ui-sref="main.projects" translate>shared.projects</a></li>
+	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
+	<li><a ui-sref="main.project.forms({projectId: project._id})" translate>project.input_forms</a></li>
+	<li class="active">{{form.name}}</li>
+</ol>
 
-		<ol class="breadcrumb">
-			<li><a href="#projects" translate>shared.projects</a></li>
-			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
-			<li><a href="#projects/{{project._id}}/forms" translate>project.input_forms</a></li>
-			<li class="active">{{form.name}}</li>
-		</ol>
+<form class="form-horizontal" role="form" name="formForm" novalidate>
 
-		<form class="form-horizontal" role="form" name="formForm" novalidate>
+	<fieldset>
+		<legend translate>project.data_collection</legend>
 
-			<fieldset>
-				<legend translate>project.data_collection</legend>
+		<div class="form-group" show-errors>
+			<label for="input-name" class="col-sm-2 control-label" translate>shared.name</label>
+			<div class="col-sm-10">
+				<input type="text"
+					   class="form-control"
+					   id="input-name"
+					   name="name"
+					   ng-model="form.name"
+					   placeholder="Exemple: Sondage trimestriel"
+					   required />
+				
+				<p class="help-block" ng-if="formForm.name.$error.required" translate>form.mandatory</p>
+			</div>
+		</div>
 
-				<div class="form-group" show-errors>
-					<label for="input-name" class="col-sm-2 control-label" translate>shared.name</label>
-					<div class="col-sm-10">
-						<input type="text"
+		<div class="form-group" show-errors>
+			<label for="periodicity-input" class="col-sm-2 control-label" translate>project.periodicity</label>
+			<div class="col-sm-10">
+				<select class="form-control"
+						name="periodicity"
+						id="periodicity-input"
+						ng-model="form.periodicity">
+					<option value="monthly" translate>project.monthly</option>
+					<option value="quarterly" translate>project.quarterly</option>
+					<option value="planned" translate>project.planned</option>
+				</select>
+			</div>
+		</div>
+
+		<div ng-if="form.periodicity == 'monthly' || form.periodicity == 'quarterly' ">
+			<div class="form-group" show-errors>
+				<label for="periodicity" class="col-sm-2 control-label" translate>shared.begin</label>
+				<div class="col-sm-10">
+					<div class="input-group">
+						<div class="input-group-addon">
+							<input type="checkbox" ng-model="form.useProjectStart" />
+							{{'project.begin'|translate}}
+						</div>
+
+						<input type="month"
 							   class="form-control"
-							   id="input-name"
-							   name="name"
-							   ng-model="form.name"
-							   placeholder="Exemple: Sondage trimestriel"
-							   required />
-						
-						<p class="help-block" ng-if="formForm.name.$error.required" translate>form.mandatory</p>
+							   ng-model="form.start"
+							   ng-disabled="form.useProjectStart"
+							   name="start"
+							   ng-required="!form.useProjectStart" />
 					</div>
 				</div>
+			</div>
 
-				<div class="form-group" show-errors>
-					<label for="periodicity-input" class="col-sm-2 control-label" translate>project.periodicity</label>
-					<div class="col-sm-10">
-						<select class="form-control"
-								name="periodicity"
-								id="periodicity-input"
-								ng-model="form.periodicity">
-							<option value="monthly" translate>project.monthly</option>
-							<option value="quarterly" translate>project.quarterly</option>
-							<option value="planned" translate>project.planned</option>
-						</select>
-					</div>
-				</div>
-
-				<div ng-if="form.periodicity == 'monthly' || form.periodicity == 'quarterly' ">
-					<div class="form-group" show-errors>
-						<label for="periodicity" class="col-sm-2 control-label" translate>shared.begin</label>
-						<div class="col-sm-10">
-							<div class="input-group">
-								<div class="input-group-addon">
-									<input type="checkbox" ng-model="form.useProjectStart" />
-									{{'project.begin'|translate}}
-								</div>
-
-								<input type="month"
-									   class="form-control"
-									   ng-model="form.start"
-									   ng-disabled="form.useProjectStart"
-									   name="start"
-									   ng-required="!form.useProjectStart" />
-							</div>
+			<div class="form-group" show-errors>
+				<label for="periodicity" class="col-sm-2 control-label" translate>shared.end</label>
+				<div class="col-sm-10">
+					<div class="input-group">
+						<div class="input-group-addon">
+							<input type="checkbox" ng-model="form.useProjectEnd" />
+							{{'project.end'|translate}}
 						</div>
-					</div>
 
-					<div class="form-group" show-errors>
-						<label for="periodicity" class="col-sm-2 control-label" translate>shared.end</label>
-						<div class="col-sm-10">
-							<div class="input-group">
-								<div class="input-group-addon">
-									<input type="checkbox" ng-model="form.useProjectEnd" />
-									{{'project.end'|translate}}
-								</div>
-
-								<input type="month"
-									   class="form-control"
-									   ng-model="form.end"
-									   ng-disabled="form.useProjectEnd"
-									   name="end"
-									   ng-required="!form.useProjectEnd" />
-							</div>
-						</div>
+						<input type="month"
+							   class="form-control"
+							   ng-model="form.end"
+							   ng-disabled="form.useProjectEnd"
+							   name="end"
+							   ng-required="!form.useProjectEnd" />
 					</div>
 				</div>
-			</fieldset>
+			</div>
+		</div>
+	</fieldset>
 
-			<fieldset>
-				<legend translate>shared.indicators</legend>
-				
-				<table class="table table-bordered table-stripped">
-					<tr ng-repeat="indicator in chosenIndicators">
-						<td>
-							<input id="ind-{{indicator.id}}" type="checkbox" ng-disabled="indicator.disabled" ng-model="indicator.selected" ng-change="updateFields()" />
-						</td>
-						<td><label style="font-weight: normal" for="ind-{{indicator.id}}">{{indicatorsById[indicator.id].name}}</label></td>
-					</tr>
-				</table>
-			</fieldset>
+	<fieldset>
+		<legend translate>shared.indicators</legend>
+		
+		<table class="table table-bordered table-stripped">
+			<tr ng-repeat="indicator in chosenIndicators">
+				<td>
+					<input id="ind-{{indicator.id}}" type="checkbox" ng-disabled="indicator.disabled" ng-model="indicator.selected" ng-change="updateFields()" />
+				</td>
+				<td><label style="font-weight: normal" for="ind-{{indicator.id}}">{{indicatorsById[indicator.id].name}}</label></td>
+			</tr>
+		</table>
+	</fieldset>
 
-			<fieldset>
-				<legend translate>shared.input_form</legend>
-				
-				<table class="table table-bordered table-stripped">
-					<thead>
-						<tr>
-							<th translate>project.sumable</th>
-							<th translate>project.input_field</th>
-							<th translate>project.value_source</th>
-							<th translate>project.input_mode</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="(indicatorId, field) in form.fields" ng-if="field.type == 'manual'">
-							<td>
-								<i class="fa fa-check" style="color: green" ng-show="indicatorsById[indicatorId].sumAllowed"></i>
-								<i class="fa fa-times" style="color: red" ng-hide="indicatorsById[indicatorId].sumAllowed"></i>
-							</td>
-							<td>{{indicatorsById[indicatorId].name}}</td>
-							<td>
-								<input type="text" ng-model="field.source" class="form-control" />
-							</td>
-							<td>
-								<div class="btn-group">
-									<button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-										{{'project.manual_input'|translate}}
-										<span class="caret"></span>
-									</button>
-									<ul class="dropdown-menu" role="menu">
-										<li ng-repeat="(formulaId, formula) in indicatorsById[indicatorId].formulas">
-											<a ng-click="useFormula(indicatorId, formulaId)">{{formula.name}}</a>
-										</li>
-									</ul>
-								</div>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</fieldset>
+	<fieldset>
+		<legend translate>shared.input_form</legend>
+		
+		<table class="table table-bordered table-stripped">
+			<thead>
+				<tr>
+					<th translate>project.sumable</th>
+					<th translate>project.input_field</th>
+					<th translate>project.value_source</th>
+					<th translate>project.input_mode</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="(indicatorId, field) in form.fields" ng-if="field.type == 'manual'">
+					<td>
+						<i class="fa fa-check" style="color: green" ng-show="indicatorsById[indicatorId].sumAllowed"></i>
+						<i class="fa fa-times" style="color: red" ng-hide="indicatorsById[indicatorId].sumAllowed"></i>
+					</td>
+					<td>{{indicatorsById[indicatorId].name}}</td>
+					<td>
+						<input type="text" ng-model="field.source" class="form-control" />
+					</td>
+					<td>
+						<div class="btn-group">
+							<button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+								{{'project.manual_input'|translate}}
+								<span class="caret"></span>
+							</button>
+							<ul class="dropdown-menu" role="menu">
+								<li ng-repeat="(formulaId, formula) in indicatorsById[indicatorId].formulas">
+									<a ng-click="useFormula(indicatorId, formulaId)">{{formula.name}}</a>
+								</li>
+							</ul>
+						</div>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</fieldset>
 
-			<br/>
-			<button ng-click="save()"
-					ng-disabled="formForm.$invalid || isUnchanged()"
-					class="btn btn-primary"
-					translate>shared.save</button>
+	<br/>
+	<button ng-click="save()"
+			ng-disabled="formForm.$invalid || isUnchanged()"
+			class="btn btn-primary"
+			translate>shared.save</button>
 
-			<button ng-click="reset()"
-					class="btn btn-default"
-					translate>shared.remove_changes</button>
+	<button ng-click="reset()"
+			class="btn btn-default"
+			translate>shared.remove_changes</button>
 
-		</form>
-	</div>
-</div>
-
+</form>
