--- a/dev/partials/projects/form-list.html
+++ b/dev/partials/projects/form-list.html
@@ -1,37 +1,28 @@
-<div class="row">
-	<div class="col-md-2">
-		<ng-include src="'partials/projects/menu.html'"></ng-include>
-	</div>
+<ol class="breadcrumb">
+	<li><a ui-sref="main.projects" translate>shared.projects</a></li>
+	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
+	<li class="active" translate>project.input_forms</li>
+</ol>
 
-	<div class="col-md-10">
-
-		<ol class="breadcrumb">
-			<li><a href="#projects" translate>shared.projects</a></li>
-			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
-			<li class="active" translate>project.input_forms</li>
-		</ol>
-
-		<table class="table table-bordered table-stripped table-condensed">
-			<thead>
-				<tr>
-					<th translate>shared.name</th>
-					<th style="width:150px"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr ng-repeat="form in project.dataCollection">
-					<td>{{form.name}}</td>
-					<td>
-						<button class="btn btn-default btn-sm" ng-click="edit(form.id)" translate>shared.edit</button>
-						<button class="btn btn-danger btn-sm" ng-click="delete(form.id)" translate>shared.delete</button>
-					</td>
-				</tr>
-				<tr>
-					<td colspan="3">
-						<button class="btn btn-default btn-xs" style="width: 100%" ng-click="edit('new')" translate>shared.add</button>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-</div>
+<table class="table table-bordered table-stripped table-condensed">
+	<thead>
+		<tr>
+			<th translate>shared.name</th>
+			<th style="width:150px"></th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr ng-repeat="form in project.dataCollection">
+			<td>{{form.name}}</td>
+			<td>
+				<button class="btn btn-default btn-sm" ui-sref="main.project.form({formId: form.id})" translate>shared.edit</button>
+				<button class="btn btn-danger btn-sm" ng-click="delete(form.id)" translate>shared.delete</button>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="3">
+				<button class="btn btn-default btn-xs" style="width: 100%" ui-sref="main.project.form({formId: 'new'})" translate>shared.add</button>
+			</td>
+		</tr>
+	</tbody>
+</table>
