--- a/dev/partials/projects/input-entities.html
+++ b/dev/partials/projects/input-entities.html
@@ -1,53 +1,44 @@
-<div class="row">
-	<div class="col-md-2">
-		<ng-include src="'partials/projects/menu.html'"></ng-include>
-	</div>
+<ol class="breadcrumb">
+	<li><a ui-sref="main.projects" translate>shared.projects</a></li>
+	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
+	<li class="active" translate>shared.input_entities</li>
+</ol>
 
-	<div class="col-md-10">
+<form name="projectForm" novalidate>
+	<table class="table table-bordered table-stripped table-condensed">
+		<thead>
+			<tr>
+				<th translate>shared.name</th>
+				<th style="width:225px"></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-if="!project.inputEntities.length">
+				<td colspan="2" style="text-align: center" translate>project.no_input_entities</td>
+			</tr>
+			<tr ng-repeat="inputEntity in project.inputEntities">
+				<td>
+					<ng-form name="center">
+						<div class="form-group" show-errors style="margin: 0">
+							<input type="text" name="name" ng-model="inputEntity.name" class="form-control input-sm" required />
+						</div>
+					</ng-form>
+				</td>
+				<td>
+					<a class="btn btn-default btn-sm" ui-sref="main.project.input_entities_reporting({entityId: inputEntity.id})" translate>shared.view_stats</a>
+					<button class="btn btn-danger btn-sm" ng-click="delete(inputEntity.id)" translate>shared.delete</button>
+				</td>
+			</tr>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="3">
+					<button class="btn btn-default btn-xs" ng-click="create()" style="width: 100%" translate>shared.add</button>
+				</td>
+			</tr>
+		</tfoot>
+	</table>
 
-		<ol class="breadcrumb">
-			<li><a href="#projects" translate>shared.projects</a></li>
-			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
-			<li class="active" translate>shared.input_entities</li>
-		</ol>
-
-		<form name="projectForm" novalidate>
-			<table class="table table-bordered table-stripped table-condensed">
-				<thead>
-					<tr>
-						<th translate>shared.name</th>
-						<th style="width:225px"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr ng-if="!project.inputEntities.length">
-						<td colspan="2" style="text-align: center" translate>project.no_input_entities</td>
-					</tr>
-					<tr ng-repeat="inputEntity in project.inputEntities">
-						<td>
-							<ng-form name="center">
-								<div class="form-group" show-errors style="margin: 0">
-									<input type="text" name="name" ng-model="inputEntity.name" class="form-control input-sm" required />
-								</div>
-							</ng-form>
-						</td>
-						<td>
-							<button class="btn btn-default btn-sm" ng-click="stats(inputEntity.id)" translate>shared.view_stats</button>
-							<button class="btn btn-danger btn-sm" ng-click="delete(inputEntity.id)" translate>shared.delete</button>
-						</td>
-					</tr>
-				</tbody>
-				<tfoot>
-					<tr>
-						<td colspan="3">
-							<button class="btn btn-default btn-xs" ng-click="create()" style="width: 100%" translate>shared.add</button>
-						</td>
-					</tr>
-				</tfoot>
-			</table>
-
-			<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary" translate>shared.save</button>
-			<button ng-click="reset()" ng-disabled="isUnchanged()"class="btn btn-default" translate>shared.remove_changes</button>
-		</form>
-	</div>
-</div>
+	<button ng-click="save()" ng-disabled="projectForm.$invalid || isUnchanged()" class="btn btn-primary" translate>shared.save</button>
+	<button ng-click="reset()" ng-disabled="isUnchanged()"class="btn btn-default" translate>shared.remove_changes</button>
+</form>
