--- a/dev/partials/projects/input.html
+++ b/dev/partials/projects/input.html
@@ -1,64 +1,55 @@
-<div class="row">
-	<div class="col-md-2">
-		<ng-include src="'partials/projects/menu.html'"></ng-include>
-	</div>
+<ol class="breadcrumb">
+	<li><a ui-sref="main.projects" translate>shared.projects</a></li>
+	<li><a ui-sref="main.project.logical_frame({projectId: project._id})">{{project.name}}</a></li>
+	<li><a ui-sref="main.project.inputs({projectId: project._id})" translate>project.waiting_inputs</a></li>
+	<li class="active">{{inputEntity.name}}</li>
+	<li class="active">{{form.name}}</li>
+</ol>
 
-	<div class="col-md-10">
+<table class="table table-bordered table-stripped table-condensed">
+	<thead>
+		<tr>
+			<th ng-style="{width:previousInput?'33%':'50%'}" translate>shared.name</th>
+			<th ng-style="{width:previousInput?'33%':'50%'}">{{input.period}}</th>
+			<th ng-style="{width:previousInput?'33%':'50%'}" ng-if="previousInput">{{previousInput.period}}</th>
+		</tr>
+	</thead>
+	<tbody ng-repeat="(fieldId, field) in fields">
+		<tr>
+			<td>
+				<div>
+				<div>
+				<label for="input-{{field.id}}">
+					<span ng-repeat="color in field.colors"
+						  ng-style="{'background-color': color}">&nbsp;&nbsp;</span> 
+					{{indicatorsById[field.id].name}}
+				</label>
+			</td>
+			<td>
+				<input id="input-{{field.id}}"
+					   type="number"
+					   ng-model="input.indicators[field.id]"
+					   ng-change="evaluate()"
+					   ng-disabled="field.type == 'computed'"
+					   tooltip-html-unsafe="Source: {{field.source}}"
+					   tooltip-trigger="focus"
+					   class="form-control" />
+			</td>
+			<td ng-if="previousInput">
+				<div class="input-group" style="width: 100%">
+					<input type="number"
+						   value="{{previousInput.indicators[field.id]}}"
+						   class="form-control"
+						   disabled />
 
-		<ol class="breadcrumb">
-			<li><a href="#projects" translate>shared.projects</a></li>
-			<li><a href="#projects/{{project._id}}">{{project.name}}</a></li>
-			<li><a href="#projects/{{project._id}}/inputs" translate>project.waiting_inputs</a></li>
-			<li class="active">{{inputEntity.name}}</li>
-			<li class="active">{{form.name}}</li>
-		</ol>
+					<span class="input-group-btn" ng-if="field.type !== 'computed'">
+						<button class="btn btn-primary" type="button" ng-click="copy(field.id)" translate>shared.copy</button>
+					</span>
+				</div>
+			</td>
+		</tr>
+	</tbody>
+</table>
 
-		<table class="table table-bordered table-stripped table-condensed">
-			<thead>
-				<tr>
-					<th ng-style="{width:previousInput?'33%':'50%'}" translate>shared.name</th>
-					<th ng-style="{width:previousInput?'33%':'50%'}">{{input.period}}</th>
-					<th ng-style="{width:previousInput?'33%':'50%'}" ng-if="previousInput">{{previousInput.period}}</th>
-				</tr>
-			</thead>
-			<tbody ng-repeat="(fieldId, field) in fields">
-				<tr>
-					<td>
-						<div>
-						<div>
-						<label for="input-{{field.id}}">
-							<span ng-repeat="color in field.colors"
-								  ng-style="{'background-color': color}">&nbsp;&nbsp;</span> 
-							{{indicatorsById[field.id].name}}
-						</label>
-					</td>
-					<td>
-						<input id="input-{{field.id}}"
-							   type="number"
-							   ng-model="input.indicators[field.id]"
-							   ng-change="evaluate()"
-							   ng-disabled="field.type == 'computed'"
-							   tooltip-html-unsafe="Source: {{field.source}}"
-							   tooltip-trigger="focus"
-							   class="form-control" />
-					</td>
-					<td ng-if="previousInput">
-						<div class="input-group" style="width: 100%">
-							<input type="number"
-								   value="{{previousInput.indicators[field.id]}}"
-								   class="form-control"
-								   disabled />
-
-							<span class="input-group-btn" ng-if="field.type !== 'computed'">
-								<button class="btn btn-primary" type="button" ng-click="copy(field.id)" translate>shared.copy</button>
-							</span>
-						</div>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-
-		<button class="btn btn-default" ng-click="save()" translate>shared.save</button>
-		<button class="btn btn-danger" ng-click="delete()" translate>shared.delete</button>
-	</div>
-</div>
+<button class="btn btn-default" ng-click="save()" translate>shared.save</button>
+<button class="btn btn-danger" ng-click="delete()" translate>shared.delete</button>
