--- a/dev/partials/projects/user-list.html
+++ b/dev/partials/projects/user-list.html
@@ -1,9 +1,1 @@
-<div class="row">
-	<div class="col-md-2">
-		<ng-include src="'partials/projects/menu.html'"></ng-include>
-	</div>
-
-	<div class="col-md-10">
-
-	</div>
-</div>
+user list
